[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/challenges/challenge5/Challenge5.gd" type="Script" id=1]
[ext_resource path="res://assets/sounds/C5.ogg" type="AudioStream" id=2]
[ext_resource path="res://objects/SettingsIcon.tscn" type="PackedScene" id=7]
[ext_resource path="res://objects/UTO.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/challenges/challenge5/backgrounds/Background1.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/challenges/challenge5/backgrounds/Background2.tscn" type="PackedScene" id=11]
[ext_resource path="res://objects/Key.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/challenges/challenge5/GuardSpawner.gd" type="Script" id=13]
[ext_resource path="res://objects/Guard.tscn" type="PackedScene" id=14]
[ext_resource path="res://objects/Chest.tscn" type="PackedScene" id=15]
[ext_resource path="res://objects/shaders/GrayScaleShader.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/challenges/challenge5/GuardsWhenSpeedIsZero.gd" type="Script" id=18]

[sub_resource type="Animation" id=1]
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.145098, 0.137255, 0.141176, 1 ), Color( 0.145098, 0.137255, 0.141176, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "victory"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.145098, 0.137255, 0.141176, 0 ), Color( 0.145098, 0.137255, 0.141176, 1 ) ]
}

[node name="Challenge5" type="Node2D"]
script = ExtResource( 1 )

[node name="flash" type="CheckButton" parent="."]
visible = false
margin_left = 331.0
margin_top = 41.0
margin_right = 441.0
margin_bottom = 87.0
rect_scale = Vector2( 2, 2 )
text = "flash"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Bg" type="CanvasLayer" parent="."]
layer = -1

[node name="GrayBg" type="ColorRect" parent="Bg"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.145098, 0.137255, 0.141176, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Background1" parent="Bg" instance=ExtResource( 9 )]

[node name="Position2D" type="Position2D" parent="Bg/Background1"]
position = Vector2( 6.80997, 315.817 )

[node name="Background2" parent="Bg" instance=ExtResource( 11 )]
visible = false
scale = Vector2( 1.175, 1.175 )

[node name="Position2D" type="Position2D" parent="Bg/Background2"]
position = Vector2( 0, -47.6595 )

[node name="GuardsWhenSpeedIsZero" type="Node2D" parent="Bg"]
visible = false
position = Vector2( 529, 563 )
script = ExtResource( 18 )
__meta__ = {
"_edit_group_": true
}

[node name="Guard" parent="Bg/GuardsWhenSpeedIsZero" instance=ExtResource( 14 )]
scale = Vector2( 0.45, 0.45 )

[node name="Outline" parent="Bg/GuardsWhenSpeedIsZero/Guard" index="0"]
visible = false

[node name="Guard2" parent="Bg/GuardsWhenSpeedIsZero" instance=ExtResource( 14 )]
position = Vector2( 150, 0 )
scale = Vector2( 0.45, 0.45 )

[node name="Outline" parent="Bg/GuardsWhenSpeedIsZero/Guard2" index="0"]
visible = false

[node name="GuardSpawner" type="Node2D" parent="Bg"]
position = Vector2( 376, 667 )
script = ExtResource( 13 )
guardScene = ExtResource( 14 )
screenTime = 3.0

[node name="Key" parent="Bg" instance=ExtResource( 12 )]
position = Vector2( 103, 1230 )

[node name="Chest" parent="Bg" instance=ExtResource( 15 )]
position = Vector2( 670, 92 )

[node name="UTO" parent="Bg" instance=ExtResource( 8 )]
position = Vector2( 650, 1177 )
scale = Vector2( 0.42, 0.42 )
showOutline = false

[node name="SettingsIcon" parent="." instance=ExtResource( 7 )]
position = Vector2( 68.1622, 77.2506 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GrayScaleShader" parent="CanvasLayer" instance=ExtResource( 16 )]
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.145098, 0.137255, 0.141176, 0 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
autoplay = "fadeIn"
anims/fadeIn = SubResource( 1 )
anims/victory = SubResource( 2 )
[connection signal="torch_activated" from="." to="Bg/GuardsWhenSpeedIsZero" method="_on_Challenge5_torch_activated"]
[connection signal="torch_activated" from="." to="Bg/GuardSpawner" method="_on_Challenge5_torch_activated"]
[connection signal="torch_disabled" from="." to="Bg/GuardsWhenSpeedIsZero" method="_on_Challenge5_torch_disabled"]
[connection signal="torch_disabled" from="." to="Bg/GuardSpawner" method="_on_Challenge5_torch_disabled"]
[connection signal="keyTaken" from="Bg/Key" to="." method="_on_Key_keyTaken"]
[connection signal="chestTouched" from="Bg/Chest" to="." method="_on_Chest_chestTouched"]
[connection signal="killed" from="Bg/UTO" to="." method="_on_UTO_killed"]
[connection signal="body_entered" from="SettingsIcon" to="." method="_on_SettingsIcon_body_entered"]

[editable path="Bg/GuardsWhenSpeedIsZero/Guard"]

[editable path="Bg/GuardsWhenSpeedIsZero/Guard2"]
